SET(llmr_SOURCES
    geometry/debug_font_buffer.cpp
    geometry/fill_buffer.cpp
    geometry/line_buffer.cpp
    geometry/vertex_buffer.cpp
    map/map.cpp
    map/tile.cpp
    map/transform.cpp
    map/vector_tile.cpp
    renderer/painter.cpp
    renderer/shader-fill.cpp
    renderer/shader-plain.cpp
    renderer/shader-outline.cpp
    renderer/shader-line.cpp
    renderer/shader.cpp
    renderer/fill_bucket.cpp
    renderer/line_bucket.cpp
    shader/shaders.cpp
    style/style.cpp
    style/resources.cpp
    style/value.cpp
    style/bucket_description.cpp
    style/layer_description.cpp
    style/properties.cpp
    util/animation.cpp
    util/mat4.cpp
)

SET(llmr_HEADERS
    ../include/llmr/geometry/debug_font_buffer.hpp
    ../include/llmr/geometry/fill_buffer.hpp
    ../include/llmr/geometry/line_buffer.hpp
    ../include/llmr/geometry/vertex_buffer.hpp
    ../include/llmr/llmr.hpp
    ../include/llmr/map/map.hpp
    ../include/llmr/map/tile.hpp
    ../include/llmr/map/transform.hpp
    ../include/llmr/map/vector_tile.hpp
    ../include/llmr/platform/gl.hpp
    ../include/llmr/platform/platform.hpp
    ../include/llmr/renderer/painter.hpp
    ../include/llmr/renderer/shader-fill.hpp
    ../include/llmr/renderer/shader-plain.hpp
    ../include/llmr/renderer/shader-outline.hpp
    ../include/llmr/renderer/shader-line.hpp
    ../include/llmr/renderer/shader.hpp
    ../include/llmr/shader/shaders.hpp
    ../include/llmr/util/animation.hpp
    ../include/llmr/util/math.hpp
    ../include/llmr/util/mat4.hpp
    ../include/llmr/util/vec.hpp
)

INCLUDE_DIRECTORIES(
    ../include
)

ADD_LIBRARY(llmr STATIC
    ${llmr_SOURCES}
    ${llmr_HEADERS}
)

LINK_DIRECTORIES(
)
